...
    Surface(modifier.fillMaxWidth().imePadding(), color = MaterialTheme.colorScheme.surface) {
        Column(Modifier.fillMaxWidth().padding(bottom = 18.dp)) {
            Text(
                when (step) {
                    AddStep.VALOR -> "Quanto foi?"
                    AddStep.DESCRICAO -> "O que foi?"
                    AddStep.PAGAMENTO -> "Como você pagou?"
                },
                style = MaterialTheme.typography.headlineMedium
            )
            Text(
                when (step) {
                    AddStep.VALOR -> "Digite o valor e confirme."
...
